# llm_optimization

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: accelerate_config.yaml  accelerate_config_simple.yaml  config.yaml  config_rl.yaml  config_rm.yaml  deepspeed_rl.json  ppo_config.yaml
src/bon/: README.md  bon_sampling.py  ensemble_rm.py  run_bon_ensembles.py  run_bon_pipeline.py  utils.py
src/data_utils/: README.md  rm_dataset_formatter.py
src/data_utils/oa_custom_datasets/: dataset_loader.py  get_dataset_patch.py  rank_datasets.py
src/ppo/: README.md  custom_helpers.py  run_ppo_gold_eval.py  trainer_rl.py
src/ppo/custom_trlx_trainers/: custom_accelerate_base_trainer.py  custom_accelerate_ppo_trainer.py
src/reward_modeling/scoring/: ppo_reward_functions.py  score.py
src/reward_modeling/training/: README.md  trainer_rm.py
src/sft/: trainer_sft.py
src/utils/: merge_seeds_script.py  merge_utils.py
