[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_optimization"
description = "Reward Model Ensembles Help Mitigate Overoptimization"
version = "0.0.1"
authors = [
    { name = "Thomas Coste", email = "tcoste99@gmail.com" }
]
dependencies = [
    "model_training @ git+https://github.com/LAION-AI/Open-Assistant.git@v0.0.4-alpha2#subdirectory=model/",
    "oasst_data @ git+https://github.com/LAION-AI/Open-Assistant.git@v0.0.4-alpha2#subdirectory=oasst-data/",
    "alpaca_farm @ git+https://github.com/tlc4418/alpaca_farm.git",
    "typer==0.9.0",
]

[tool.black]
line-length = 120
target-version = ['py310']